--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dua 3</title>
+  <title>Dua 3 - Dua Sharing</title>
 </head>
 <body>
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
+
   <script>
     const message = `*There’s hope, even for your past*
 
@@ -35,14 +36,13 @@ Access the full supplication in both English and Arabic at: https://www.duashari
 
 When you share this post, you’re not simply sharing a dua. You’re opening the door to millions of people making sincere dua for you — with the Malaika (Angels) themselves saying “Ameen” to every single one.
 
-May Allah accept it from you, and from everyone it reaches through you.
+May Allah accept it from you, and reward you for all those it reaches through you.
 
 Ameen`;
 
-    // Fallbacks for sensitive glyphs
     const fallbacks = {
-      'ﷻ': 'ﷻ (may He be glorified)',
-      'ﷺ': 'ﷺ (peace be upon him)'
+      'ﷻ': 'ﷻ',
+      'ﷺ': 'ﷺ'
     };
 
     let messageWithFallback = message;
@@ -74,5 +74,7 @@ Ameen`;
   </script>
 </body>
 </html>
+
+
 
 
