--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dua 3 - Dua Sharing</title>
+  <title>Dua 1 - Dua Sharing</title>
 </head>
 <body>
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
@@ -11,34 +11,23 @@
   <script>
     const message = `*There’s hope, even for your past*
 
-This powerful dua calls upon Allah ﷻ — by His Names Al-Hayy (The Ever-Living) and Al-Qayyūm (The Self-Sustaining) — to transform every sin from our past, present, and future into abundant good deeds, magnified beyond measure by His infinite mercy. Because with His mercy, every mistake can become a source of blessing.
+This powerful dua calls upon Allah ﷻ — by His Names Al-Hayy (The Ever-Living) and Al-Qayyūm (The Self-Sustaining) — to transform every sin from our past, present, and future into abundant good deeds, magnified beyond measure by His infinite mercy.
 
-As Allah ﷻ says in the Noble Qur’an:
+*The Duʿāʾ:*  
 
-“Except for those who repent, believe and do righteous work. For them Allah will replace their evil deeds with good. And ever is Allah Forgiving and Merciful.”
-(Surah Al-Furqan 25:70)
+Ya Allah (O Allah), Ya Hayy (O Ever-Living), Ya Qayyum (O Self-Sustaining), Bi-Rahmatika (By Your Mercy), we ask of You a special forgiveness that transforms every one of our sins from past, present and future into abundant Ḥasanāt (good deeds). And have those Ḥasanāt magnified and enlarged infinitely without limit.
 
-*Ya Allah (O Allah), Ya Hayy (O Ever-Living), Ya Qayyum (O Self-Sustaining), Bi-Rahmatika (By Your Mercy), we ask of You a special forgiveness that transforms every one of our sins from past, present and future into abundant Ḥasanāt (good deeds). And have those Ḥasanāt magnified and enlarged infinitely without limit.*
+This duʿāʾ is part of the *Supplication of Infinite Blessings* — a growing chain of heartfelt duʿāʾs shared by countless believers like you, worldwide.
 
-This dua is part of *The Supplication of Infinite Blessings* — a powerful collection of heartfelt supplications designed to benefit you in both this life and the next. 
+And because in an authentic hadith reported by Muʿādh ibn Anas (ra), Rasulullah ﷺ encouraged us to share beneficial knowledge, I humbly ask that you please forward this message far and wide — it only takes a few seconds, and your sharing can start a chain of duʿāʾs that continue returning to you from everyone it reaches.
 
-*At Dua Sharing, our mission is simple*: 
+When you share this message, you’re not simply sharing a duʿāʾ. You’re opening the door to countless people making sincere duʿāʾ for you daily — with the Malaika (Angels) themselves saying *“Ameen”* to every single one.
 
-To encourage sincere dua, meaningful sharing, and to multiply blessings through a growing global chain of people making dua for one another every single day.
+For detailed information on this and the full *Supplication of Infinite Blessings* in both (English + Arabic) visit: https://www.duasharing.com/
 
-As Rasulullah ﷺ said: 
+I make duʿāʾ that Allah accepts it from you, and reward you for all those it reaches through you.
 
-“The supplication of a Muslim for his brother in his absence will certainly be answered. Every time he makes a supplication for good for his brother, the angel appointed for this task says: ‘Ameen! And may it be for you too.”
-
-Every post we share is taken directly from the full Supplication of Infinite Blessings — with the aim of moving hearts, inspiring action, and reminding us all of what truly matters.
-
-Access the full supplication in both English and Arabic at: https://www.duasharing.com
-
-When you share this post, you’re not simply sharing a dua. You’re opening the door to millions of people making sincere dua for you — with the Malaika (Angels) themselves saying “Ameen” to every single one.
-
-May Allah accept it from you, and reward you for all those it reaches through you.
-
-Ameen`;
+*Ameen.*`;
 
     const fallbacks = {
       'ﷻ': 'ﷻ',
@@ -74,7 +63,3 @@ Ameen`;
   </script>
 </body>
 </html>
-
-
-
-
