--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dua 1 - Dua Sharing</title>
+  <title>Dua 3 - Dua Sharing</title>
 </head>
 <body>
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
 
   <script>
-    const message = `*There’s hope, even for your past*
+    const message = `There’s hope, even for your past
 
-This powerful dua calls upon Allah ﷻ — by His Names Al-Hayy (The Ever-Living) and Al-Qayyūm (The Self-Sustaining) — to transform every sin from our past, present, and future into abundant good deeds, magnified beyond measure by His infinite mercy.
+Pause for a moment, turn your heart sincerely toward Allah, and read this short duʿāʾ for transforming your sins into virtues. Then forward it to 5 people to earn ongoing reward and duʿā.
 
-*The Duʿāʾ:*  
+Niyyah:
+
+I intend this recitation of this du'a for myself, the compilers, the sharers, and the recipients.
+
+The Duʿāʾ:
 
 Ya Allah (O Allah), Ya Hayy (O Ever-Living), Ya Qayyum (O Self-Sustaining), Bi-Rahmatika (By Your Mercy), we ask of You a special forgiveness that transforms every one of our sins from past, present and future into abundant Ḥasanāt (good deeds). And have those Ḥasanāt magnified and enlarged infinitely without limit.
 
-This duʿāʾ is part of the *Supplication of Infinite Blessings* — a growing chain of heartfelt duʿāʾs shared by countless believers like you, worldwide.
+Because of the niyyah, when others recite this after you share it, you are included in their duʿāʾ. They will be praying for your sins to be transformed into abundant Ḥasanāt too.
 
-And because in an authentic hadith reported by Muʿādh ibn Anas (ra), Rasulullah ﷺ encouraged us to share beneficial knowledge, I humbly ask that you please forward this message far and wide — it only takes a few seconds, and your sharing can start a chain of duʿāʾs that continue returning to you from everyone it reaches.
+This is 1 of 23 supplications from The Supplication of Infinite Blessings.
 
-When you share this message, you’re not simply sharing a duʿāʾ. You’re opening the door to countless people making sincere duʿāʾ for you daily — with the Malaika (Angels) themselves saying *“Ameen”* to every single one.
+Take a few seconds now and forward this to at least 5 people — so the reward of spreading goodness increases for you, and duʿāʾs continue to be made for you with every sincere recitation.
 
-For detailed information on this and the full *Supplication of Infinite Blessings* in both (English + Arabic) visit: https://www.duasharing.com/
-
-I make duʿāʾ that Allah accepts it from you, and reward you for all those it reaches through you.
-
-*Ameen.*`;
+Find the full Supplication of Infinite Blessings in both English and Arabic at: https://www.duasharing.com/`;
 
     const fallbacks = {
       'ﷻ': 'ﷻ',
