--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
   <a id="manualLink" href="#" target="_blank" style="display:none;">Open WhatsApp</a>
 
   <script>
-    const message = `There’s hope, even for your past
+    const message = `*There’s hope, even for your past*
 
 Pause for a moment, turn your heart sincerely toward Allah, and read this short duʿāʾ for transforming your sins into virtues. Then forward it to 5 people to earn ongoing reward and duʿā.
 
-Niyyah:
+*Niyyah*:
 
 I intend this recitation of this du'a for myself, the compilers, the sharers, and the recipients.
 
-The Duʿāʾ:
+*The Duʿāʾ*:
 
 Ya Allah (O Allah), Ya Hayy (O Ever-Living), Ya Qayyum (O Self-Sustaining), Bi-Rahmatika (By Your Mercy), we ask of You a special forgiveness that transforms every one of our sins from past, present and future into abundant Ḥasanāt (good deeds). And have those Ḥasanāt magnified and enlarged infinitely without limit.
 
 Because of the niyyah, when others recite this after you share it, you are included in their duʿāʾ. They will be praying for your sins to be transformed into abundant Ḥasanāt too.
 
-This is 1 of 23 supplications from The Supplication of Infinite Blessings.
+This is 1 of 23 supplications from *The Supplication of Infinite Blessings*.
 
-Take a few seconds now and forward this to at least 5 people — so the reward of spreading goodness increases for you, and duʿāʾs continue to be made for you with every sincere recitation.
+*Take a few seconds now and forward this to at least 5 people* — so the reward of spreading goodness increases for you, and duʿāʾs continue to be made for you with every sincere recitation.
 
 Find the full Supplication of Infinite Blessings in both English and Arabic at: https://www.duasharing.com/`;
 
